  * softwarestore/view/pendingview.py:
    - fix crash in cancel handling (LP: #435454)
  * softwarestore/view/appdetailsview.py:
    - add translator comment for the price (LP: #435405)
  * data/templates/AppDetailsView.html:
    - simplify the html, disable DnD (LP: #434236), thanks to
      Istvan Nyitrai
  * adjust alignment (LP: #435727)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 23 Sep 2009 14:37:45 +0200

software-store (0.3.9) karmic; urgency=low

  [ Michael Vogt ]
  * softwarestore/view/appdetailsview.py, data/templates/AppDetailsView.html:
    - add basic license information to each package
  * softwarestore/app.py:
    - set default focus on the search entry and focus categories
      ("departments") on key-down (LP: #433828)
  * data/templates/CategoriesView.html:
    - arrow key navigation added (thanks to Stuart Langridge)
  * softwarestore/db/database.py:
    - move query parser code into a proper place and default to
      AND for multiple search terms (LP: #432978)
    - support boolean expressions in the search terms (AND, OR, NOT)
  * disable warning if a package gets removed that another package
    recommends (its not part of the spec how to handle this)
  * softwarestore/db/update.py:
    - do not fail if no locale is defined (LP: #434699)

  [ Andrew Higginson ]
  * debian/control:
    - add python-gconf dependencies (needed in the image fetch code to
      get the proxy from gconf)
  * softwarestore/view/appdetailsview.py, softwarestore/view/dialogs.py:
    - make the remove dialog conform to the spec

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 23 Sep 2009 12:07:31 +0200

software-store (0.3.8) karmic; urgency=low

  * softwarestore/db/update.py:
    - ensure that empty strings are not tried to be translated
      (LP: #432995)
  * softwarestore/view/appdetailsview.py:
    - support config file prompts and media change requests
  * debian/control:
    - add dependency to python-aptdaemon-gtk for the media change
      dialog